--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8' />
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <title>Palette Picker</title>
   </head>
   <body>
-    
+    <h1>Palette Picker</h1>
+    <section>
+      <div class="color-1">
+        #color
+      </div>
+      <div class="color-2">
+        #color
+      </div>
+      <div class="color-3">
+        #color
+      </div>
+      <div class="color-4">
+        #color
+      </div>
+      <div class="color-5">
+        #color
+      </div>
+    </section>
+    <button onclick="generatePalette()">Generate New Palette</button>
+    <form>
+      <select name="" id="project-select">
+        <option value="project">Name of Project</option>
+      </select>
+      <input type="text" />
+      <button>Save Palette</button>
+    </form>
+    <script>window.jQuery || document.write('<script src="/jquery/jquery.js"><\/script>')</script>
+    <script src="js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
