--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Palette Picker</title>
   </head>
   <body>
     <h1>Palette Picker</h1>
-    <section>
-      <div class="color-1">
-        #color
+    <section class='color-wrap'>
+      <div class="color-1 color-div">
+        <p class="hex"></p>
       </div>
-      <div class="color-2">
-        #color
+      <div class="color-2 color-div">
+        <p class="hex"></p>
       </div>
-      <div class="color-3">
-        #color
+      <div class="color-3 color-div">
+        <p class="hex"></p>
       </div>
-      <div class="color-4">
-        #color
+      <div class="color-4 color-div">
+        <p class="hex"></p>
       </div>
-      <div class="color-5">
-        #color
+      <div class="color-5 color-div">
+        <p class="hex"></p>
       </div>
     </section>
     <button onclick="generatePalette()">Generate New Palette</button>
@@ -29,7 +30,7 @@
         <option value="project">Name of Project</option>
       </select>
       <input type="text" />
-      <button>Save Palette</button>
+      <button onsubmit="savePalette()">Save Palette</button>
     </form>
     <script>window.jQuery || document.write('<script src="/jquery/jquery.js"><\/script>')</script>
     <script src="js/scripts.js" type="text/javascript"></script>
