--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,10 @@
       </label>
       <button>Create Project</button>
     </form>
-    <div class='projects-wrap'></div>
+    <div class='projects-wrap-wrap'>
+      <h2>Existing Projects</h2>
+      <div class='projects-wrap'></div>
+    </div>
     <script>window.jQuery || document.write('<script src="/jquery/jquery.js"><\/script>')</script>
     <script src="js/scripts.js" type="text/javascript"></script>
   </body>
