Change names of things to palette lab theme and add classes for styling, svgs for animation

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Palette Picker</title>
+    <title>Palette Lab</title>
   </head>
   <body>
-    <h1>Palette Picker</h1>
+    <h1 class="page-title">Palette Lab</h1>
     <section class="color-wrap">
       <div class="swatch-wrap">
-        <div class="color-1 color-div">
+        <div class="color-1 color-div circle">
+          <svg xmlns="http://www.w3.org/2000/svg">
+            <g>
+              <path xmlns="http://www.w3.org/2000/svg" class="wave" d="m692.033997,15.401c0,0 -12.926025,-10 -19.885986,-12c-13.919983,-5 -29.828003,-3 -40.765991,7c-12.926025,8.999999 -29.829041,11.999999 -44.744019,5c-6.960022,-4 -12.926025,-10 -19.885986,-12c-13.921021,-5 -29.830017,-3 -40.767029,7c-12.925964,8.999999 -29.828979,11.999999 -44.742981,5c-6.959991,-4 -12.927002,-10 -19.886993,-12c-13.920013,-5 -29.82901,-3 -40.766998,7c-12.925995,8.999999 -29.82901,11.999999 -44.744019,5c-6.959991,-4 -12.925995,-10 -19.885986,-12c-13.920013,-5 -29.82901,-3 -40.765991,7l0.993988,-1c-16.902985,12.999999 -39.772003,10.999999 -56.675995,-2c-14.914001,-12 -34.800003,-8 -48.721008,2c-16.903,12.999999 -39.770996,10.999999 -56.674988,-2c-14.915009,-12 -34.801003,-8 -48.721008,2c-16.903,12.999999 -39.771996,10.999999 -56.675999,-2c-14.913998,-12 -34.799998,-8 -48.721,2l0,208.940003l736.778041,0l0,-207.940003c-12.922058,8.999999 -29.825073,11.999999 -44.740051,5z" />
+            </g>
+          </svg>
         </div>
         <div class="swatch-bottom-wrap">
           <p class="hex"></p>
@@ -19,7 +24,12 @@
         </div>
       </div>
       <div class="swatch-wrap">
-        <div class="color-2 color-div">
+        <div class="color-2 color-div circle">
+          <svg xmlns="http://www.w3.org/2000/svg">
+            <g>
+              <path xmlns="http://www.w3.org/2000/svg" class="wave" d="m692.033997,15.401c0,0 -12.926025,-10 -19.885986,-12c-13.919983,-5 -29.828003,-3 -40.765991,7c-12.926025,8.999999 -29.829041,11.999999 -44.744019,5c-6.960022,-4 -12.926025,-10 -19.885986,-12c-13.921021,-5 -29.830017,-3 -40.767029,7c-12.925964,8.999999 -29.828979,11.999999 -44.742981,5c-6.959991,-4 -12.927002,-10 -19.886993,-12c-13.920013,-5 -29.82901,-3 -40.766998,7c-12.925995,8.999999 -29.82901,11.999999 -44.744019,5c-6.959991,-4 -12.925995,-10 -19.885986,-12c-13.920013,-5 -29.82901,-3 -40.765991,7l0.993988,-1c-16.902985,12.999999 -39.772003,10.999999 -56.675995,-2c-14.914001,-12 -34.800003,-8 -48.721008,2c-16.903,12.999999 -39.770996,10.999999 -56.674988,-2c-14.915009,-12 -34.801003,-8 -48.721008,2c-16.903,12.999999 -39.771996,10.999999 -56.675999,-2c-14.913998,-12 -34.799998,-8 -48.721,2l0,208.940003l736.778041,0l0,-207.940003c-12.922058,8.999999 -29.825073,11.999999 -44.740051,5z" />
+            </g>
+          </svg>
         </div>
         <div class="swatch-bottom-wrap">
           <p class="hex"></p>
@@ -28,7 +38,12 @@
         </div>
       </div>
       <div class="swatch-wrap">
-        <div class="color-3 color-div">
+        <div class="color-3 color-div circle">
+          <svg xmlns="http://www.w3.org/2000/svg">
+              <g>
+                <path xmlns="http://www.w3.org/2000/svg" class="wave" d="m692.033997,15.401c0,0 -12.926025,-10 -19.885986,-12c-13.919983,-5 -29.828003,-3 -40.765991,7c-12.926025,8.999999 -29.829041,11.999999 -44.744019,5c-6.960022,-4 -12.926025,-10 -19.885986,-12c-13.921021,-5 -29.830017,-3 -40.767029,7c-12.925964,8.999999 -29.828979,11.999999 -44.742981,5c-6.959991,-4 -12.927002,-10 -19.886993,-12c-13.920013,-5 -29.82901,-3 -40.766998,7c-12.925995,8.999999 -29.82901,11.999999 -44.744019,5c-6.959991,-4 -12.925995,-10 -19.885986,-12c-13.920013,-5 -29.82901,-3 -40.765991,7l0.993988,-1c-16.902985,12.999999 -39.772003,10.999999 -56.675995,-2c-14.914001,-12 -34.800003,-8 -48.721008,2c-16.903,12.999999 -39.770996,10.999999 -56.674988,-2c-14.915009,-12 -34.801003,-8 -48.721008,2c-16.903,12.999999 -39.771996,10.999999 -56.675999,-2c-14.913998,-12 -34.799998,-8 -48.721,2l0,208.940003l736.778041,0l0,-207.940003c-12.922058,8.999999 -29.825073,11.999999 -44.740051,5z" />
+              </g>
+          </svg>
         </div>
         <div class="swatch-bottom-wrap">
           <p class="hex"></p>
@@ -37,7 +52,12 @@
         </div>
       </div>
       <div class="swatch-wrap">
-        <div class="color-4 color-div">
+        <div class="color-4 color-div circle">
+          <svg xmlns="http://www.w3.org/2000/svg">
+            <g>
+              <path xmlns="http://www.w3.org/2000/svg" class="wave" d="m692.033997,15.401c0,0 -12.926025,-10 -19.885986,-12c-13.919983,-5 -29.828003,-3 -40.765991,7c-12.926025,8.999999 -29.829041,11.999999 -44.744019,5c-6.960022,-4 -12.926025,-10 -19.885986,-12c-13.921021,-5 -29.830017,-3 -40.767029,7c-12.925964,8.999999 -29.828979,11.999999 -44.742981,5c-6.959991,-4 -12.927002,-10 -19.886993,-12c-13.920013,-5 -29.82901,-3 -40.766998,7c-12.925995,8.999999 -29.82901,11.999999 -44.744019,5c-6.959991,-4 -12.925995,-10 -19.885986,-12c-13.920013,-5 -29.82901,-3 -40.765991,7l0.993988,-1c-16.902985,12.999999 -39.772003,10.999999 -56.675995,-2c-14.914001,-12 -34.800003,-8 -48.721008,2c-16.903,12.999999 -39.770996,10.999999 -56.674988,-2c-14.915009,-12 -34.801003,-8 -48.721008,2c-16.903,12.999999 -39.771996,10.999999 -56.675999,-2c-14.913998,-12 -34.799998,-8 -48.721,2l0,208.940003l736.778041,0l0,-207.940003c-12.922058,8.999999 -29.825073,11.999999 -44.740051,5z" />
+            </g>
+          </svg>
         </div>
         <div class="swatch-bottom-wrap">
           <p class="hex"></p>
@@ -46,7 +66,12 @@
         </div>
       </div>
       <div class="swatch-wrap">
-        <div class="color-5 color-div">
+        <div class="color-5 color-div circle">
+          <svg xmlns="http://www.w3.org/2000/svg">
+            <g>
+              <path xmlns="http://www.w3.org/2000/svg" class="wave" d="m692.033997,15.401c0,0 -12.926025,-10 -19.885986,-12c-13.919983,-5 -29.828003,-3 -40.765991,7c-12.926025,8.999999 -29.829041,11.999999 -44.744019,5c-6.960022,-4 -12.926025,-10 -19.885986,-12c-13.921021,-5 -29.830017,-3 -40.767029,7c-12.925964,8.999999 -29.828979,11.999999 -44.742981,5c-6.959991,-4 -12.927002,-10 -19.886993,-12c-13.920013,-5 -29.82901,-3 -40.766998,7c-12.925995,8.999999 -29.82901,11.999999 -44.744019,5c-6.959991,-4 -12.925995,-10 -19.885986,-12c-13.920013,-5 -29.82901,-3 -40.765991,7l0.993988,-1c-16.902985,12.999999 -39.772003,10.999999 -56.675995,-2c-14.914001,-12 -34.800003,-8 -48.721008,2c-16.903,12.999999 -39.770996,10.999999 -56.674988,-2c-14.915009,-12 -34.801003,-8 -48.721008,2c-16.903,12.999999 -39.771996,10.999999 -56.675999,-2c-14.913998,-12 -34.799998,-8 -48.721,2l0,208.940003l736.778041,0l0,-207.940003c-12.922058,8.999999 -29.825073,11.999999 -44.740051,5z" />
+            </g>
+          </svg>
         </div>
         <div class="swatch-bottom-wrap">
           <p class="hex"></p>
@@ -56,22 +81,24 @@
       </div>
     </section>
     <button class="generate-palette button"
-            onclick="generatePalette()">Generate New Palette</button>
-    <form onsubmit="savePalette(event)">
-      <select id="project-select">
-        <option value="project">Pick a Project</option>
-      </select>
-      <input type="text" class="palette-name" />
-      <button>Save Palette</button>
-    </form>
-    <form onsubmit="createProject(event)">
-      <label for="create-project">
-        <input type="text" id="create-project" />
-      </label>
-      <button>Create Project</button>
-    </form>
-    <div class='projects-wrap-wrap'>
-      <h2>Existing Projects</h2>
+            onclick="generatePalette()">Mix New Palette</button>
+    <section class="form-wrap">
+      <form onsubmit="savePalette(event)">
+        <select id="project-select">
+          <option value="project">Pick a Project</option>
+        </select>
+        <input type="text" class="palette-name-input" />
+        <button>Save Palette</button>
+      </form>
+      <form onsubmit="createProject(event)">
+        <label for="create-project">
+          <input type="text" id="create-project" />
+        </label>
+        <button>Create Project</button>
+      </form>
+    </section>
+    <div class="projects-wrap-wrap">
+      <h1 class="existing-projects">Existing Projects</h1>
       <div class='projects-wrap'></div>
     </div>
     <script>window.jQuery || document.write('<script src="/jquery/jquery.js"><\/script>')</script>
