Add image to title

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Palette Lab</title>
   </head>
   <body>
-    <h1 class="page-title">Palette Lab</h1>
+    <div className="title-wrap">
+      <img src="./assets/flasks.svg" alt="chemistry set" class="chemistry-set" />
+      <h1 class="page-title">Palette Lab</h1>
+    </div>
     <section class="color-wrap">
       <div class="swatch-wrap">
         <div class="color-1 color-div circle">
