--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,7 @@
       <div class='projects-wrap'></div>
     </div>
     <script>window.jQuery || document.write('<script src="/jquery/jquery.js"><\/script>')</script>
+    <script src="helpers/cssHooks.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
