--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Palette Lab</title>
   </head>
   <body>
