--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.css" />
+    <meta name="theme-color" content="#e56b94" />
     <link rel="manifest" href="/manifest.json" />
     <title>Palette Lab</title>
   </head>
